<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<item
        android:id="@+id/miSettings"
        android:icon="@drawable/ic_settings"
		app:showAsAction="always"
        android:title="@string/settings">
    </item>
	
	<item
        android:id="@+id/miSetting"
        android:title="@string/settings_ImportExport">
		<menu>
			<item
                android:id="@+id/miSettingImportar"
                android:title="@string/settings_import" />
            <item
                android:id="@+id/miSettingExportar"
                android:title="@string/settings_export" />
		</menu>
    </item>
	
	<item
        android:id="@+id/miLimparConfig"
        android:title="@string/clear_settings"/>

	<item
        android:id="@+id/miExit"
        android:title="@string/exit"/>
	
</menu>
