<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="top|center">

	<LinearLayout
		android:focusable="true" 
		android:focusableInTouchMode="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="top|center"
		android:padding="10dp">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_marginBottom="5dp">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/proxy_remote"
				android:textStyle="bold"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<android.support.design.widget.TextInputLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						android:id="@+id/fragment_proxy_remoteProxyIpEdit"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:inputType="text"
						android:ems="9"
						android:textColor="@color/colorText"
						android:hint="@string/proxy_ip"
						android:singleLine="true"/>

				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						android:id="@+id/fragment_proxy_remoteProxyPortaEdit"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:ems="4"
						android:textColor="@color/colorText"
						android:inputType="number"
						android:hint="@string/proxy_port"
						android:singleLine="true"/>

				</android.support.design.widget.TextInputLayout>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_marginBottom="5dp">

			<android.support.v7.widget.AppCompatCheckBox
				android:id="@+id/fragment_proxy_remoteUsarAutenticacaoCheck"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:textColor="@color/colorText"
				android:hint="@string/proxy_auth"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/fragment_proxy_remoteAutenticacaoLinearLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:visibility="gone">

			<android.support.design.widget.TextInputLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/fragment_proxy_remoteAutenticacaoUsuarioEdit"
					android:layout_height="wrap_content"
					android:textColor="@color/colorText"
					android:layout_width="wrap_content"
					android:hint="@string/proxy_user"
					android:ems="7"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/fragment_proxy_remoteAutenticacaoSenhaEdit"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:textColor="@color/colorText"
					android:hint="@string/proxy_pass"
					android:ems="7"/>

			</android.support.design.widget.TextInputLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="right"
			android:layout_marginTop="5dp">

			<Button
				android:id="@+id/fragment_proxy_remoteCancelButton"
				android:background="@android:color/transparent"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/cancel"/>

			<Button
				android:id="@+id/fragment_proxy_remoteSaveButton"
				android:background="@android:color/transparent"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/save"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>
